# wxdash

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-data-model-and-network-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-gauges-and-dashboard-layout/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-trends-secondary-data-and-air-quality/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/05-cmake-install-kiosk-target-for-raspberry-pi-deployment/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-3-day-forecast-panel-with-weather-icons-high-low-temps-and-precipitation-chance/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-wind-rose-calm-and-color/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: eglfs.json  wxdash-kiosk.desktop  wxdash-kiosk.desktop.in  wxdash.desktop  wxdash.service.in
src/: CMakeLists.txt  icons.qrc  main.cpp
src/models/: WeatherDataModel.cpp  WeatherDataModel.h  WeatherReadings.h
src/network/: HttpPoller.cpp  HttpPoller.h  JsonParser.cpp  JsonParser.h  JsonPoller.cpp  JsonPoller.h  NwsPoller.cpp  NwsPoller.h  PurpleAirPoller.cpp  PurpleAirPoller.h  UdpReceiver.cpp  UdpReceiver.h
src/qml/: AqiGauge.qml  ArcGauge.qml  CompassRose.qml  DashboardGrid.qml  ForecastPanel.qml  Main.qml  MinMaxTicks.qml  RainGauge.qml  ReservedCell.qml  SparklineCanvas.qml  WindGauge.qml
tests/: CMakeLists.txt  tst_JsonParser.cpp  tst_PurpleAirParser.cpp  tst_WeatherDataModel.cpp
